updated photos on index.html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <!-- banner-bottom -->	
 	<div class="banner-bottom">
 		<div class="container">
-			<div class="col-md-6 w3ls_banner_bottom_left">
+			<center><div class="col-md-6 w3ls_banner_bottom_left">
 				<div class="w3ls_banner_bottom_left1">
 				</div>
 				<div class="w3ls_banner_bottom_right1">
@@ -154,53 +154,13 @@
 					</div>
 				</div>
 				<div class="clearfix"> </div>
-			</div>
-			<div class="col-md-6 w3ls_banner_bottom_right">
-				<section class="slider">
-					<div class="flexslider">
-						<ul class="slides">
-							<li>	
-								<div class="agileits_w3layouts_banner_bottom_grid">
-									<img src="images/1.jpg" alt=" " class="img-responsive" />
-								</div>
-							</li>
-							<li>	
-								<div class="agileits_w3layouts_banner_bottom_grid">
-									<img src="images/2.jpg" alt=" " class="img-responsive" />
-								</div>
-							</li>
-							<li>	
-								<div class="agileits_w3layouts_banner_bottom_grid">
-									<img src="images/3.jpg" alt=" " class="img-responsive" />
-								</div>
-							</li>
-						</ul>
-					</div>
-				</section>
-			</div>
+			</div></center>
 			<div class="clearfix"> </div>
 		</div>
-	</div>
+	</div> <br/><br/>
 <!-- //banner-bottom -->	
 <!-- bootstrap-pop-up -->
-	<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					Edifying
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
-				</div>
-				<section>
-					<div class="modal-body">
-						<img src="images/10.jpg" alt=" " class="img-responsive" />
-						<p>OOB communities aims to provide a safe haven for the overall development of an individual alongside equipping him with the best tools to carve out his niche. Our wide network of experts, educators and mentors provide ample inspiration to kick-start a journey of learning and self-discovery. 
-							As Robert John Meehan aptly put it,<i> “Developing a desire to learn is the kindling point of all classroom achievement.”</i>Join us to not only be industry-ready but life-ready.
-</p>
-					</div>
-				</section>
-			</div>
-		</div>
-	</div>
+	
 <!-- //bootstrap-pop-up -->
 <!-- register -->
 	<div class="register">
@@ -230,10 +190,7 @@
 				<div class="wthree_gallery_grid">
 					<a href="images/8.jpg" class="lsb-preview" data-lsb-group="header">
 						<div class="view second-effect">
-							<img src="images/8.jpg" alt="" class="img-responsive" />
-							<div class="mask">
-								<p>Edifying</p>
-							</div>
+							<img src="images/1.jpeg" alt="" class="img-responsive" />
 						</div>	
 					</a>
 				</div>
@@ -242,10 +199,7 @@
 				<div class="wthree_gallery_grid">
 					<a href="images/9.jpg" class="lsb-preview" data-lsb-group="header">
 						<div class="view second-effect">
-							<img src="images/9.jpg" alt="" class="img-responsive" />
-							<div class="mask">
-								<p>Edifying</p>
-							</div>
+							<img src="images/2.jpeg" alt="" class="img-responsive" />
 						</div>	
 					</a>
 				</div>
@@ -254,10 +208,7 @@
 				<div class="wthree_gallery_grid">
 					<a href="images/10.jpg" class="lsb-preview" data-lsb-group="header">
 						<div class="view second-effect">
-							<img src="images/10.jpg" alt="" class="img-responsive" />
-							<div class="mask">
-								<p>Edifying</p>
-							</div>
+							<img src="images/3.jpeg" alt="" class="img-responsive" />
 						</div>	
 					</a>
 				</div>
@@ -266,22 +217,7 @@
 				<div class="wthree_gallery_grid">
 					<a href="images/11.jpg" class="lsb-preview" data-lsb-group="header">
 						<div class="view second-effect">
-							<img src="images/11.jpg" alt="" class="img-responsive" />
-							<div class="mask">
-								<p>Edifying</p>
-							</div>
-						</div>	
-					</a>
-				</div>
-			</li>
-			<li>
-				<div class="wthree_gallery_grid">
-					<a href="images/12.jpg" class="lsb-preview" data-lsb-group="header">
-						<div class="view second-effect">
-							<img src="images/12.jpg" alt="" class="img-responsive" />
-							<div class="mask">
-								<p>Edifying</p>
-							</div>
+							<img src="images/4.jpeg" alt="" class="img-responsive" />
 						</div>	
 					</a>
 				</div>
