updated images of poster and mentor

--- a/courses.html
+++ b/courses.html
@@ -103,7 +103,7 @@ Hurry up! Grab a seat now!  Look for the details on the poster and contact us AS
 					</div>
 				</div>
 				<div class="col-md-6 agileits_courses_right">
-					<img src="images/2.jpg" alt=" " class="img-responsive" />
+					<img src="images/DANCE CAN TALK.jpg" alt=" " class="img-responsive" />
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -188,7 +188,7 @@ Hurry up! Grab a seat now!  Look for the details on the poster and contact us AS
 			</div>
 			<div class="agileits_w3layouts_team_grids">
 				<div class="col-md-6 w3l_stats_bottom_grid_left">
-					<img src="images/5.jpg" alt=" " class="img-responsive" />
+					<img src="images/MEET YOUR MENTOR.jpeg" alt=" " class="img-responsive" />
 				</div>
 				<div class="col-md-6 w3l_stats_bottom_grid_right">
 					Harsha Maheshwari also known as Komet, Director of Happy Hours Dance Place, Begumpet.<br/><br/>
